<resources>
    <string name="app_name">LotoQuinote</string>
    <string name="createButton">Créer un nouveau tirage</string>
    <string name="contentDescriptionImageButton1">Edit</string>
    <string name="contentDescriptionImageButton2">Delete</string>
    <string name="numberDrew">1</string>
    <string name="submitButton">Ajouter</string>
    <string name="finishButton">Terminer</string>
    <string name="pos1List"> </string>
    <string name="pos2List"> </string>
    <string name="pos3List"> </string>
    <string name="pos4List"> </string>
    <string name="pos5List"> </string>
    <string name="ContentDescriptionImageButton3">Add</string>
    <string name="autoFillHints">Entrez un numéro</string>
    <string name="drawTitle">Titre du tirage</string>
    <string name="drawListSort">Trier par :</string>
    <string name="drawListBackButton">Retour</string>
    <string name="drawListHomeButton">Accueil</string>
    <string-array name="sort_array">
        <item>Ordre de tirage</item>
        <item>Dizaines</item>
        <item>Ordre croissant</item>
        <item>Ordre décroissant</item>
    </string-array>
</resources>
