<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".controller.DrawListActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="113dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/aguafina_script"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridView
        android:id="@+id/drawListGridView"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginTop="30dp"
        android:padding="5dp"
        android:numColumns="5"
        android:verticalSpacing="5dp"
        android:horizontalSpacing="5dp"
        android:gravity="start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">
    </GridView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/drawListGuideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/drawListGuideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="350dp" />


    <TextView
        android:id="@+id/drawListSortText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drawListSort"
        android:layout_marginTop="30dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        app:layout_constraintTop_toBottomOf="@+id/drawListGridView"
        app:layout_constraintLeft_toLeftOf="@+id/drawListGuideline1"/>
    
    <Spinner
        android:id="@+id/drawListSpinner"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/drawListGridView"
        app:layout_constraintLeft_toLeftOf="@+id/drawListSortText"
        app:layout_constraintRight_toRightOf="@+id/drawListGuideline2" />
    
    <Button
        android:id="@+id/drawListBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/drawListSortText"
        app:layout_constraintLeft_toLeftOf="@+id/drawListGuideline1"
        app:layout_constraintRight_toRightOf="@+id/drawListGuideline2"
        android:text="@string/drawListBackButton" />

    <Button
        android:id="@+id/drawListHomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/drawListBackButton"
        app:layout_constraintLeft_toLeftOf="@+id/drawListGuideline1"
        app:layout_constraintRight_toRightOf="@+id/drawListGuideline2"
        android:text="@string/drawListHomeButton" />

</androidx.constraintlayout.widget.ConstraintLayout>